--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/skin/default/skin.css}" id="skin" />
 <link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/style.css}" />
 <!--[if IE 6]>
-<script type="text/javascript" th:src="@{/DD_belatedPNG_0.0.8a-min.js}" ></script>
+<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 <script>DD_belatedPNG.fix('*');</script>
 <![endif]-->
 <title>H-ui.admin v3.1</title>
@@ -203,7 +203,7 @@ function myselfinfo(){
 		maxmin: true,
 		shade:0.4,
 		title: '查看信息',
-		content: '<div>管理员信息</div>'
+		content: '<div>管理员姓名</div><div>管理员手机号</div>'
 	});
 }
 
