--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -19,8 +19,14 @@
 	<title>产品列表</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 产品管理 <span class="c-gray en">&gt;</span> 产品列表
-	<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb">
+	<i class="Hui-iconfont">&#xe67f;</i>首页
+	<span class="c-gray en">&gt;</span> 产品管理
+	<span class="c-gray en">&gt;</span> 产品列表
+	<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
+		<i class="Hui-iconfont">&#xe68f;</i>
+	</a>
+</nav>
 <div class="page-container">
 	<div class="text-c">
 		<form class="Huiform" method="post" action="" target="_self">
@@ -37,34 +43,34 @@
 			</span><button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);"><i class="Hui-iconfont">&#xe600;</i> 添加</button>
 		</form>
 	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="r">共有数据：<strong><span th:text="${pageUtils.totalCount}"/></strong> 条</span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
 				<tr class="text-c">
 					<th width="25"><input type="checkbox" name="" value="" /></th>
 					<th width="70">ID</th>
-					<th width="80">排序</th>
-					<th width="200">LOGO</th>
-					<th width="120">品牌名称</th>
-					<th>具体描述</th>
+					<th width="80">类目名称</th>
+					<th width="200">类目图标</th>
+					<th width="120">是否商品</th>
+					<th width="120">原价</th>
 					<th width="100">操作</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
-					<td><input name="" type="checkbox" value=""/></td>
-					<td>1</td>
-					<td><input type="text" class="input-text text-c" value="1"/></td>
-					<td><img src="temp/brand/dongpeng.jpeg"/></td>
-					<td class="text-l"><img title="国内品牌" src="static/h-ui.admin/images/cn.gif"/> 东鹏</td>
-					<td class="text-l">东鹏陶瓷被评为“中国名牌”、“国家免检产品”、“中国驰名商标”、http://www.dongpeng.net/</td>
-					<td class="f-14 product-brand-manage">
-						<a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;"
-						   title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-						<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除">
-							<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
+			<tr class="text-c" th:each="categoryVO:${pageUtils.list}">
+				<td><input name="" type="checkbox" value=""/></td>
+				<td th:text="${categoryVO.id}"></td>
+				<td th:text="${categoryVO.name}"></td>
+				<td><img src="${categoryVO.icon}"/></td>
+				<td th:text=" ${categoryVO.categoryType} == 3 ? '是' : '否'"></td>
+				<td th:text="${categoryVO.price}!=null?${categoryVO.price}:0"></td>
+				<td class="f-14 product-brand-manage">
+					<a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;"
+					   title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
+					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除">
+						<i class="Hui-iconfont">&#xe6e2;</i></a></td>
+			</tr>
 			</tbody>
 		</table>
 	</div>
@@ -90,7 +96,7 @@ $('.table-sort').dataTable({
 	"bStateSave": true,//状态保存
 	"aoColumnDefs": [
 	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,6]}// 制定列不参与排序
+	  {"orderable":false,"aTargets":[0,4,5,6]}// 制定列不参与排序
 	]
 });
 </script>
