--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -72,7 +72,7 @@
 			<dt><i class="Hui-iconfont">&#xe620;</i> 产品管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="goods/list?pageNo=1&amp;pageSize=10" data-title="产品列表" href="javascript:void(0)">产品列表</a></li>
+					<li><a data-href="goods/list" data-title="产品列表" href="javascript:void(0)">产品列表</a></li>
 				</ul>
 			</dd>
 	</dl>
