--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
-	<script type="text/javascript" th:src="@{/html5shiv.js}"></script>
-	<script type="text/javascript" th:src="@{/respond.min.js}"></script>
+	<script type="text/javascript" th:src="@{/lib/html5shiv.js}"></script>
+	<script type="text/javascript" th:src="@{/lib/respond.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui/css/H-ui.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/H-ui.admin.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/Hui-iconfont/1.0.8/iconfont.css}" />
@@ -43,7 +43,7 @@
 			</span><button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);"><i class="Hui-iconfont">&#xe600;</i> 添加</button>
 		</form>
 	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="r">共有数据：<strong><span th:text="${pageUtils.totalCount}"/></strong> 条</span> </div>
+	<!--<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="r">共有数据：<strong><span th:text="${#lists.size(list)}"/></strong> 条</span> </div>-->
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -57,21 +57,6 @@
 					<th width="100">操作</th>
 				</tr>
 			</thead>
-			<tbody>
-			<tr class="text-c" th:each="categoryVO:${pageUtils.list}">
-				<td><input name="" type="checkbox" value=""/></td>
-				<td th:text="${categoryVO.id}"></td>
-				<td th:text="${categoryVO.name}"></td>
-				<td><img src="${categoryVO.icon}"/></td>
-				<td th:text=" ${categoryVO.categoryType} == 3 ? '是' : '否'"></td>
-				<td th:text="${categoryVO.price}!=null?${categoryVO.price}:0"></td>
-				<td class="f-14 product-brand-manage">
-					<a style="text-decoration:none" onClick="product_brand_edit('品牌编辑','codeing.html','1')" href="javascript:;"
-					   title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a>
-					<a style="text-decoration:none" class="ml-5" onClick="active_del(this,'10001')" href="javascript:;" title="删除">
-						<i class="Hui-iconfont">&#xe6e2;</i></a></td>
-			</tr>
-			</tbody>
 		</table>
 	</div>
 </div>
@@ -91,14 +76,92 @@
 <script type="text/javascript" th:src="@{/lib/datatables/1.10.0/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" th:src="@{/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
-$('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
-	"bStateSave": true,//状态保存
-	"aoColumnDefs": [
-	  //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-	  {"orderable":false,"aTargets":[0,4,5,6]}// 制定列不参与排序
-	]
-});
+    var tbl;
+    $(function () {
+        tbl=$('.table-sort').dataTable({
+            "aaSorting": [[ 1, "desc" ]],//默认第几个排序
+            /* 			"bStateSave": true,//状态保存 */
+            "bLengthChange": true,                  //是否允许用户自定义每页显示条数。
+            "bPaginate": true,                      //是否分页。
+            "bProcessing": true,                    //当datatable获取数据时候是否显示正在处理提示信息。
+            "sPaginationType": 'full_numbers',      //分页样式
+            "serverSide":false,
+
+            "ajax": {
+                url:"list",
+                type:"get",
+                dataType: "json",
+                dataSrc:
+                    function(data){
+                    debugger
+                        if(data.recordsTotal==null){
+                            data.recordsTotal=0;
+                        }
+                        //查询结束取消按钮不可用
+                        return data;//自定义数据源，默认为data
+                    },
+            },
+            "retrieve":true,
+            "columns": [
+                { "data": "id",
+                    "bSortable": false,
+                    "render": function ( data, type, full, meta ) {
+                        return '<input type="checkbox" value="'+data+'" name=""/>';
+                    }
+                },
+                { "data": "id" },
+                { "data": "name" ,"bSortable": false},
+                { "data": "icon",
+                    "bSortable": false,
+                    "render": function ( data, type, full, meta ) {
+                        return '<img src="'+ data +'"/>';
+                    }
+                },
+                { "data": "categoryType",
+                    "bSortable": false,
+                    "render": function ( data, type, full, meta ) {
+                        return data==3?'<span>是</span>':'<span>否</span>'
+                    }
+                },
+                { "data": "price",
+                    "bSortable": false,
+                    "render": function ( data, type, full, meta ) {
+                        return data!=null?'<span>'+data.price +'</span>':'<span>0</span>'
+                    }
+                },
+
+                { "data":  null,"bSortable": false,
+                    "render": function (data, type,row) {
+
+                        return '<div><span>123</span></div>';
+                    }
+                }
+            ],
+        });
+        $("#on-search").click(function () {
+            var oSettings = tbl.fnSettings();
+            tbl.fnClearTable(0);
+            tbl.fnDraw();
+
+        });
+    });
+    /*用户-添加*/
+    function user_add(title,url,w,h){
+        layer_show(title,url,w,h);
+    }
+
+    /*用户-编辑*/
+    function user_edit(title,url,id,w,h){
+        layer_show(title,url,w,h);
+    }
+
+    /*用户-删除*/
+    function member_del(obj,id){
+        layer.confirm('确认要删除吗？',function(index){
+            $(obj).parents("tr").remove();
+            layer.msg('已删除!',{icon:1,time:1000});
+        });
+    }
 </script>
 </body>
 </html>
