--- a/admin/src/main/resources/templates/problem-list.html
+++ b/admin/src/main/resources/templates/problem-list.html
@@ -15,10 +15,10 @@
 
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
-<title>资讯列表</title>
+<title>问题列表</title>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 资讯管理 <span class="c-gray en">&gt;</span> 资讯列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 问题管理 <span class="c-gray en">&gt;</span> 问题列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
 	<div class="text-c">
 		<button onclick="removeIframe()" class="btn btn-primary radius">关闭选项卡</button>
@@ -35,8 +35,8 @@
 		<input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text"/>
 		<button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜资讯</button>
 	</div>
-	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a>
-		<a class="btn btn-primary radius" data-title="添加资讯" data-href="/admin/problem/add" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加资讯</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
+		<a class="btn btn-primary radius" data-title="添加问题" data-href="/admin/problem/add" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加问题</a></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
 			<thead>
@@ -49,28 +49,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name="" /></td>
-					<td>10001</td>
-					<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯标题</u></td>
-					<td>行业动态</td>
-					<td>H-ui</td>
-					<td>2014-6-11 11:11:42</td>
-					<td>21212</td>
-					<td class="td-status"><span class="label label-success radius">已发布</span></td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
-				<tr class="text-c">
-					<td><input type="checkbox" value="" name=""/></td>
-					<td>10002</td>
-					<td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10002')" title="查看">资讯标题</u></td>
-					<td>行业动态</td>
-					<td>H-ui</td>
-					<td>2014-6-11 11:11:42</td>
-					<td>21212</td>
-					<td class="td-status"><span class="label label-success radius">草稿</span></td>
-					<td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_shenhe(this,'10001')" href="javascript:;" title="审核">审核</a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-				</tr>
+
 			</tbody>
 		</table>
 	</div>
@@ -90,16 +69,63 @@
 <script type="text/javascript" th:src="@{/lib/datatables/1.10.0/jquery.dataTables.min.js}"></script>
 <script type="text/javascript" th:src="@{/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
-$('.table-sort').dataTable({
-	"aaSorting": [[ 1, "desc" ]],//默认第几个排序
-	"bStateSave": true,//状态保存
-	"pading":false,
-    "columns": [
-        { "data": "name" },
-        { "data": "answer" }
-    ],
-	"ajax" : "/admin/problem/getTableData"
-});
+    var tbl;
+    $(function () {
+        tbl=$('.table-sort').dataTable({
+            "aaSorting": [[ 1, "desc" ]],//默认第几个排序
+			/* 			"bStateSave": true,//状态保存 */
+            "bLengthChange": true,                  //是否允许用户自定义每页显示条数。
+            "bPaginate": true,                      //是否分页。
+            "bProcessing": true,                    //当datatable获取数据时候是否显示正在处理提示信息。
+            "sPaginationType": 'full_numbers',      //分页样式
+            "serverSide":false,
+
+            "ajax": {
+                url:"/admin/problem/getData",
+                type:"get",
+                dataType: "json",
+                dataSrc:
+                    function(data){
+                        debugger
+                        if(data.recordsTotal==null){
+                            data.recordsTotal=0;
+                        }
+                        //查询结束取消按钮不可用
+                        return data;//自定义数据源，默认为data
+                    },
+            },
+            "retrieve":true,
+            "columns": [
+                { "data": "id",
+                    "bSortable": false,
+                    "render": function ( data, type, full, meta ) {
+                        return '<input type="checkbox" value="'+data+'" name=""/>';
+                    }
+                },
+                { "data": "id" },
+                { "data": "name" ,"bSortable": false},
+                { "data": "answer",
+                    "bSortable": false
+                },
+				{ "data":  null,"bSortable": false,
+                    "render": function (data, type,row) {
+						console.log(data);
+                        var tem = '<a title="编辑" href="javascript:;" onclick="problem_edit(\'管理员编辑\',\'/admin/problem/update\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
+                            + '<i class="Hui-iconfont">&#xe6df;</i></a>'+
+                            '<a title="删除" href="javascript:;" onclick="problem_del(this,\''+data.id+'\')" class="ml-5" style="text-decoration:none">'
+                            + '<i class="Hui-iconfont">&#xe6e2;</i></a>';
+                        return tem;
+                    }
+                }
+            ],
+        });
+        $("#on-search").click(function () {
+            var oSettings = tbl.fnSettings();
+            tbl.fnClearTable(0);
+            tbl.fnDraw();
+
+        });
+    });
 
 /*资讯-添加*/
 function article_add(title,url,w,h){
@@ -111,20 +137,20 @@ function article_add(title,url,w,h){
 	layer.full(index);
 }
 /*资讯-编辑*/
-function article_edit(title,url,id,w,h){
+function problem_edit(title,url,id,w,h){
 	var index = layer.open({
 		type: 2,
 		title: title,
-		content: url
+		content: url + "/" + id
 	});
 	layer.full(index);
 }
 /*资讯-删除*/
-function article_del(obj,id){
+function problem_del(obj,id){
 	layer.confirm('确认要删除吗？',function(index){
 		$.ajax({
 			type: 'POST',
-			url: '',
+			url: '/admin/problem/del/' + id,
 			dataType: 'json',
 			success: function(data){
 				$(obj).parents("tr").remove();
@@ -137,51 +163,7 @@ function article_del(obj,id){
 	});
 }
 
-/*资讯-审核*/
-function article_shenhe(obj,id){
-	layer.confirm('审核文章？', {
-		btn: ['通过','不通过','取消'], 
-		shade: false,
-		closeBtn: 0
-	},
-	function(){
-		$(obj).parents("tr").find(".td-manage").prepend('<a class="c-primary" onClick="article_start(this,id)" href="javascript:;" title="申请上线">申请上线</a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已发布</span>');
-		$(obj).remove();
-		layer.msg('已发布', {icon:6,time:1000});
-	},
-	function(){
-		$(obj).parents("tr").find(".td-manage").prepend('<a class="c-primary" onClick="article_shenqing(this,id)" href="javascript:;" title="申请上线">申请上线</a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-danger radius">未通过</span>');
-		$(obj).remove();
-    	layer.msg('未通过', {icon:5,time:1000});
-	});	
-}
-/*资讯-下架*/
-function article_stop(obj,id){
-	layer.confirm('确认要下架吗？',function(index){
-		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_start(this,id)" href="javascript:;" title="发布"><i class="Hui-iconfont">&#xe603;</i></a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-defaunt radius">已下架</span>');
-		$(obj).remove();
-		layer.msg('已下架!',{icon: 5,time:1000});
-	});
-}
 
-/*资讯-发布*/
-function article_start(obj,id){
-	layer.confirm('确认要发布吗？',function(index){
-		$(obj).parents("tr").find(".td-manage").prepend('<a style="text-decoration:none" onClick="article_stop(this,id)" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a>');
-		$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已发布</span>');
-		$(obj).remove();
-		layer.msg('已发布!',{icon: 6,time:1000});
-	});
-}
-/*资讯-申请上线*/
-function article_shenqing(obj,id){
-	$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">待审核</span>');
-	$(obj).parents("tr").find(".td-manage").html("");
-	layer.msg('已提交申请，耐心等待审核!', {icon: 1,time:2000});
-}
 
 </script> 
 </body>
