--- a/admin/src/main/resources/templates/problem-edit.html
+++ b/admin/src/main/resources/templates/problem-edit.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <article class="page-container">
-	<form class="form form-horizontal" action="/admin/problem/update" enctype="application/x-www-form-urlencoded" method="post" id="form-problem-add">
+	<form class="form form-horizontal" action="/admin/problem/update" method="post" id="form-problem-add">
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>问题名称：</label>
 			<div class="formControls col-xs-8 col-sm-9">
@@ -59,6 +59,8 @@
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" th:src="@{/lib/jquery.contextmenu/jquery.contextmenu.r2.js}"></script>
 
+<script type="text/javascript" th:src="@{/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
+<script type="text/javascript" th:src="@{/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
 
 <!--请在下方写此页面业务相关的脚本-->
 <script type="text/javascript" th:src="@{/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
@@ -66,30 +68,18 @@
 <script type="text/javascript" th:src="@{/lib/laypage/1.2/laypage.js}"></script>
 <script type="text/javascript">
 $(function(){
-	$('.skin-minimal input').iCheck({
-		checkboxClass: 'icheckbox-blue',
-		radioClass: 'iradio-blue',
-		increaseArea: '20%'
-	});
-	
 	//表单验证
 	$("#form-problem-add").validate({
-		rules:{
-			articletitle:{
-				required:true,
-			},
-			articletitle2:{
-				required:true,
-			}
-
-		},
 		onkeyup:false,
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
+		    debugger
 			$(form).ajaxSubmit(function (res) {
+			    debugger
 				if (res == 'ok') {
-                    parent.layer.close(index);
+                    parent.location.reload();
+                    layer_close();
 				}else {
                     console.log(res);
 				}
