--- a/admin/src/main/resources/templates/problem-list.html
+++ b/admin/src/main/resources/templates/problem-list.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
-	<script type="text/javascript" th:src="@{/html5shiv.js}"></script>
-	<script type="text/javascript" th:src="@{/respond.min.js}"></script>
+	<script type="text/javascript" th:src="@{/lib/html5shiv.js}"></script>
+	<script type="text/javascript" th:src="@{/lib/respond.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui/css/H-ui.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/H-ui.admin.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/Hui-iconfont/1.0.8/iconfont.css}" />
@@ -86,7 +86,6 @@
                 dataType: "json",
                 dataSrc:
                     function(data){
-                        debugger
                         if(data.recordsTotal==null){
                             data.recordsTotal=0;
                         }
