--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -28,22 +28,9 @@
 	</a>
 </nav>
 <div class="page-container">
-	<div class="text-c">
-		<form class="Huiform" method="post" action="" target="_self">
-			<input type="text" placeholder="分类名称" value="" class="input-text" style="width:120px"/>
-			<span class="btn-upload form-group">
-			<input class="input-text upload-url" type="text" name="uploadfile-2" id="uploadfile-2" readonly="true" style="width:200px" />
-			<a href="javascript:void();" class="btn btn-primary upload-btn"><i class="Hui-iconfont">&#xe642;</i> 上传logo</a>
-			<input type="file" multiple="true" name="file-2" class="input-file" />
-			</span> <span class="select-box" style="width:150px">
-			<select class="select" name="brandclass" size="1">
-				<option value="1" selected="selected">国内品牌</option>
-				<option value="0">国外品牌</option>
-			</select>
-			</span><button type="button" class="btn btn-success" id="" name="" onClick="picture_colume_add(this);"><i class="Hui-iconfont">&#xe600;</i> 添加</button>
-		</form>
-	</div>
-	<!--<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="r">共有数据：<strong><span th:text="${#lists.size(list)}"/></strong> 条</span> </div>-->
+
+	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
+		<a class="btn btn-primary radius" data-title="添加类目" data-href="/admin/goods/add" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加类目</a></span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -93,7 +80,6 @@
                 dataType: "json",
                 dataSrc:
                     function(data){
-                    debugger
                         if(data.recordsTotal==null){
                             data.recordsTotal=0;
                         }
@@ -126,42 +112,49 @@
                 { "data": "price",
                     "bSortable": false,
                     "render": function ( data, type, full, meta ) {
-                        return data!=null?'<span>'+data.price +'</span>':'<span>0</span>'
+                        return data!=null?'<span>'+data +'---' +type +'---' +full.price+'---' +meta+'</span>':'<span>0</span>'
                     }
                 },
 
                 { "data":  null,"bSortable": false,
                     "render": function (data, type,row) {
-
-                        return '<div><span>123</span></div>';
+                        var tem = '<a title="编辑" href="javascript:;" onclick="edit(\'管理员编辑\',\'/admin/goods/edit\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
+                            + '<i class="Hui-iconfont">&#xe6df;</i></a>'+
+                            '<a title="删除" href="javascript:;" onclick="del(this,\''+data.id+'\')" class="ml-5" style="text-decoration:none">'
+                            + '<i class="Hui-iconfont">&#xe6e2;</i></a>';
+                        return tem;
                     }
                 }
             ],
         });
-        $("#on-search").click(function () {
-            var oSettings = tbl.fnSettings();
-            tbl.fnClearTable(0);
-            tbl.fnDraw();
-
-        });
     });
-    /*用户-添加*/
-    function user_add(title,url,w,h){
-        layer_show(title,url,w,h);
-    }
 
-    /*用户-编辑*/
-    function user_edit(title,url,id,w,h){
-        layer_show(title,url,w,h);
-    }
-
-    /*用户-删除*/
-    function member_del(obj,id){
-        layer.confirm('确认要删除吗？',function(index){
-            $(obj).parents("tr").remove();
-            layer.msg('已删除!',{icon:1,time:1000});
-        });
-    }
+/*资讯-编辑*/
+function edit(title,url,id,w,h){
+	var index = layer.open({
+		type: 2,
+		title: title,
+		content: url + "/" + id
+	});
+	layer.full(index);
+}
+function del(obj,id) {
+	layer.confirm('确认要删除吗？', function (index) {
+		$.ajax({
+			type: 'POST',
+			url: '/admin/goods/delete/' + id,
+			dataType: 'json',
+			success: function (data) {
+				$(obj).parents("tr").remove();
+				layer.msg('已删除!', {icon: 1, time: 1000});
+				return;
+			},
+			error: function (data) {
+				console.log(data.msg);
+			},
+		});
+	});
+}
 </script>
 </body>
 </html>
