--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -30,7 +30,7 @@
 <div class="page-container">
 
 	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
-		<a class="btn btn-primary radius" data-title="添加类目" data-href="/admin/goods/add" onclick="Hui_admin_tab(this)" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加类目</a></span> </div>
+		<a class="btn btn-primary radius" data-title="添加类目" onclick="add('新增','/admin/goods/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加类目</a></span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
@@ -118,7 +118,7 @@
 
                 { "data":  null,"bSortable": false,
                     "render": function (data, type,row) {
-                        var tem = '<a title="编辑" href="javascript:;" onclick="edit(\'管理员编辑\',\'/admin/goods/edit\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
+                        var tem = '<a title="编辑" href="javascript:;" onclick="edit(\'编辑\',\'/admin/goods/edit\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
                             + '<i class="Hui-iconfont">&#xe6df;</i></a>'+
                             '<a title="删除" href="javascript:;" onclick="del(this,\''+data.id+'\')" class="ml-5" style="text-decoration:none">'
                             + '<i class="Hui-iconfont">&#xe6e2;</i></a>';
@@ -128,7 +128,15 @@
             ],
         });
     });
-
+/*资讯-编辑*/
+function add(title,url){
+	var index = layer.open({
+		type: 2,
+		title: title,
+		content: url
+	});
+	layer.full(index);
+}
 /*资讯-编辑*/
 function edit(title,url,id,w,h){
 	var index = layer.open({
