--- a/admin/src/main/resources/templates/article-add.html
+++ b/admin/src/main/resources/templates/article-add.html
@@ -22,30 +22,50 @@
 </head>
 <body>
 <article class="page-container">
-	<form class="form form-horizontal" id="form-article-add" action="/test">
+	<form class="form form-horizontal" onsubmit="return false" action="##" method="post" th:id="form-article-add">
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>ID：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" style="display: none"/>
+			</div>
+		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>资讯标题：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" value="" placeholder="" id="articletitle" name="articletitle"/>
+				<input type="text" class="input-text" th:value="${entity.title}" placeholder="" id="title" name="title"/>
 			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>是否热点：</label>
+			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
+				<select class="select" th:value="${entity.isTop}" id="isTop" name="isTop">
+					<option value="0">否</option>
+					<option value="1">是</option>
+				</select>
+				</span> </div>
 		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>资讯类型：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select name="articletype" class="select">
+				<select class="select" th:value="${entity.type}" id="type" name="type">
 					<option value="0">全部类型</option>
 					<option value="1">帮助说明</option>
 					<option value="2">新闻资讯</option>
 				</select>
 				</span> </div>
 		</div>
-
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>资讯作者：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<input type="text" class="input-text" th:value="${entity.newsAuther}" placeholder="" id="newsAuther" name="newsAuther"/>
+			</div>
+		</div>
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">图片：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<div class="uploader-thum-container">
 					<img th:src="${entity.img}" id="img" name="img"/>
-					<input style="display: none" id="icon" name="icon"/>
+					<!--<input style="display: none" id="img" name="img"/>-->
 					<div id="filePicker">选择图片</div>
 				</div>
 			</div>
@@ -53,27 +73,26 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">资讯内容：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<script id="editor" type="text/plain" style="width:100%;height:400px;"></script></div>
+				<script id="editor" type="text/plain" style="width:100%;height:400px;" th:value="${entity.content}" name="content"></script></div>
 		</div>
+
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2">资讯日期：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" onfocus="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'commentdatemax\')||\'%y-%M-%d\'}' })" id="commentdatemin" name="commentdatemin" class="input-text Wdate"/>
+				<input type="text" th:value="${entity.newsDate}" onclick="WdatePicker({ dateFmt:'yyyy-MM-dd HH:mm:ss',maxDate:'#F{$dp.$D(\'commentdatemax\')||\'%y-%M-%d\'}' })" id="newsDate" name="newsDate" class="input-text Wdate"/>
 			</div>
 		</div>
 
-
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
-				<button onClick="article_save_submit();" class="btn btn-primary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存并提交审核</button>
-				<button onClick="removeIframe();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
+				<button th:onclick="'formArticleAdd()'" class="btn btn-primary radius"><i class="Hui-iconfont">&#xe632;</i> 保存</button>
+				<button onClick="layer_close();" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
 	</form>
 </article>
 
-<script type="text/javascript" th:src="@{/lib/jquery/1.9.1/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/lib/layer/2.4/layer.js}"></script>
+<script type="text/javascript" th:src="@{/lib/jquery/1.9.1/jquery.min.js}"></script><script type="text/javascript" th:src="@{/lib/layer/2.4/layer.js}"></script>
 <script type="text/javascript" th:src="@{/h-ui/js/H-ui.min.js}"></script>
 <script type="text/javascript" th:src="@{/h-ui.admin/js/H-ui.admin.js}"></script>
 
@@ -87,7 +106,6 @@
 <script type="text/javascript" th:src="@{/lib/laypage/1.2/laypage.js}"></script>
 
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" th:src="@{/lib/My97DatePicker/4.8/WdatePicker.js}"></script>
 <script type="text/javascript" th:src="@{/lib/jquery.validation/1.14.0/jquery.validate.js}"></script>
 <script type="text/javascript" th:src="@{/lib/jquery.validation/1.14.0/validate-methods.js}"></script>
 <script type="text/javascript" th:src="@{/lib/jquery.validation/1.14.0/messages_zh.js}"></script>
@@ -194,23 +212,39 @@ $(function(){
 
 
 });
+
+function formArticleAdd(){
+	var data = {
+        id : $("#id").val()==null?null:$("#id").val(),
+        title : $("#title").val()==null?'':$("#title").val(),
+        type: $("#type").val()==null?'':$("#type").val(),
+        isTop: $("#isTop").val()==null?'':$("#isTop").val(),
+        newsAuther: $("#newsAuther").val()==null?'':$("#newsAuther").val(),
+        img: $("#img").val()==null?'':$("#img").val(),
+		content: UE.getEditor('editor').getContent()==null?'':UE.getEditor('editor').getContent(),
+        newsDate:$("#newsDate").val()==null?'':$("#newsDate").val(),
+	}
+    $.ajax({
+        url:[["/admin/news/save"]],
+        type: "POST",
+        dataType:"json",
+        contentType: 'application/json',
+        data: JSON.stringify(data),
+        success:function(data){
+            if (data) {
+                parent.location.reload();
+                layer_close();
+            } else {
+                window.alert(data);
+            }
+        },
+        error:function(e){
+            window.alert(e.toString());
+        }
+    });
+};
 $(function(){
 
-	//表单验证
-	$("#form-goods-add").validate({
-		onkeyup:false,
-		focusCleanup:true,
-		success:"valid",
-		submitHandler:function(form){
-			$.ajax({
-				url:"/admin/article/add",
-				type:"post",
-				data:{
-
-				}
-			});
-		}
-	});
 
 
 });
