--- a/admin/src/main/resources/templates/problem-edit.html
+++ b/admin/src/main/resources/templates/problem-edit.html
@@ -44,7 +44,7 @@
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
 				<button class="btn btn-secondary radius" type="submit"><i class="Hui-iconfont">&#xe632;</i> 保存草稿</button>
-				<button onClick="removeIframe();" id="close" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
+				<button onClick="layer_close()" id="close" class="btn btn-default radius" type="button">&nbsp;&nbsp;取消&nbsp;&nbsp;</button>
 			</div>
 		</div>
 	</form>
@@ -74,9 +74,7 @@ $(function(){
 		focusCleanup:true,
 		success:"valid",
 		submitHandler:function(form){
-		    debugger
 			$(form).ajaxSubmit(function (res) {
-			    debugger
 				if (res == 'ok') {
                     parent.location.reload();
                     layer_close();
