--- a/admin/src/main/resources/templates/article-add.html
+++ b/admin/src/main/resources/templates/article-add.html
@@ -23,10 +23,10 @@
 <body>
 <article class="page-container">
 	<form class="form form-horizontal" onsubmit="return false" action="##" method="post" th:id="form-article-add">
-		<div class="row cl">
+		<div class="row cl" style="display: none">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>ID：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" style="display: none"/>
+				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" th:readonly="true" />
 			</div>
 		</div>
 		<div class="row cl">
