--- a/admin/src/main/resources/templates/product-add.html
+++ b/admin/src/main/resources/templates/product-add.html
@@ -22,10 +22,10 @@
 <body>
 <div class="page-container">
 	<form action="/admin/goods/save" method="post" class="form form-horizontal" id="form-goods-add">
-		<div class="row cl">
+		<div class="row cl" style="display: none">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>类目ID：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" style="display: none"/>
+				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" th:readonly="true"/>
 			</div>
 		</div>
 		<div class="row cl">
@@ -46,9 +46,14 @@
 		</div>
 
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">上级类目ID：</label>
+			<label class="form-label col-xs-4 col-sm-2">上级类目：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="parentId" id="parentId" placeholder="" th:value="${entity.parentId}" class="input-text"/>
+				<select name="parentId" th:field="${entity.parentId}" id="parentId" class="select" th:value="${entity.parentId}"  >
+					<option value="">--请选择--</option>
+					<option th:each="cts,userStat:${list}" th:value="${cts.id}" th:text="${cts.name}"></option>
+
+				</select>
+				<!--<input type="text" name="parentId" id="parentId" placeholder="" th:value="${entity.parentId}" class="input-text"/>-->
 			</div>
 		</div>
 		<div class="row cl">
