--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -112,7 +112,7 @@
                 { "data": "price",
                     "bSortable": false,
                     "render": function ( data, type, full, meta ) {
-                        return data!=null?'<span>'+data +'---' +type +'---' +full.price+'---' +meta+'</span>':'<span>0</span>'
+                        return data!=null?'<span>'+data +'</span>':'<span>0</span>'
                     }
                 },
 
