--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -80,7 +80,7 @@
 			<dt><i class="Hui-iconfont">&#xe613;</i> 用户管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/member/index" data-title="用户管理" href="javascript:void(0)">用户管理</a></li>
+					<li><a data-href="/admin/member/index" data-title="用户管理" href="javascript:void(0)">用户列表</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -88,7 +88,7 @@
 			<dt><i class="Hui-iconfont">&#xe616;</i> 常见问题管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/problem/list" data-title="常见问题管理" href="javascript:void(0)">常见问题管理</a></li>
+					<li><a data-href="/admin/problem/list" data-title="常见问题管理" href="javascript:void(0)">常见问题列表</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -96,7 +96,7 @@
 			<dt><i class="Hui-iconfont">&#xe616;</i> 回收单管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/order/index" data-title="回收单管理" href="javascript:void(0)">回收单管理</a></li>
+					<li><a data-href="/admin/order/index" data-title="回收单管理" href="javascript:void(0)">回收单列表</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -104,15 +104,24 @@
 			<dt><i class="Hui-iconfont">&#xe622;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/news/index" data-title="资讯管理" href="javascript:void(0)">资讯管理</a></li>
+					<li><a data-href="/admin/news/index" data-title="资讯管理" href="javascript:void(0)">资讯列表</a></li>
+					<li><a data-href="/admin/news/type/index" data-title="资讯管理" href="javascript:void(0)">资讯列表</a></li>
 			</ul>
 		</dd>
 	</dl>
+		<dl id="menu-banner">
+			<dt><i class="Hui-iconfont">&#xe628;</i> 广告位管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/banner/index" data-title="广告位管理" href="javascript:void(0)">广告位列表</a></li>
+				</ul>
+			</dd>
+		</dl>
 		<dl id="menu-wordbook">
 			<dt><i class="Hui-iconfont">&#xe622;</i> 字典管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/wordbook/index" data-title="字典管理" href="javascript:void(0)">字典管理</a></li>
+					<li><a data-href="/admin/wordbook/index" data-title="字典管理" href="javascript:void(0)">字典列表</a></li>
 				</ul>
 			</dd>
 		</dl>
