--- a/admin/src/main/resources/templates/product-brand.html
+++ b/admin/src/main/resources/templates/product-brand.html
@@ -100,7 +100,8 @@
                 { "data": "icon",
                     "bSortable": false,
                     "render": function ( data, type, full, meta ) {
-                        return '<img src="'+ data +'"/>';
+                        return '<div style="width:40px;height:30px;display:inline-block; verticalAlign:middle;marginRight:10px">' +
+                            '<a href="'+data+'" target="_blank"><img src="'+data+'" style="width:100%;height:100%;border:none" /></a></div>';
                     }
                 },
                 { "data": "categoryType",
