--- a/admin/src/main/resources/templates/banner-add.html
+++ b/admin/src/main/resources/templates/banner-add.html
@@ -21,34 +21,61 @@
 </head>
 <body>
 <div class="page-container">
-	<form action="/admin/wordbook/save" method="post" class="form form-horizontal" id="form-wordbook-add">
+	<form action="/admin/banner/save" method="post" class="form form-horizontal" id="form-banner-add">
 		<div class="row cl" style="display: none">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>用户ID：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>ID：</label>
 			<div class="formControls col-xs-8 col-sm-9">
 				<input type="text" class="input-text" th:value="${entity.id}" placeholder="" id="id" name="id" th:readonly="true"/>
 			</div>
 		</div>
+		<!--{ "data": "id" },-->
+		<!--{ "data": "version" ,"bSortable": false},-->
+		<!--{ "data": "channel" ,"bSortable": false},-->
+		<!--{ "data": "title" ,"bSortable": false},-->
+		<!--{ "data": "icon" ,"bSortable": false,-->
+		<!--status-->
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>名称：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>版本号：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.name}" placeholder="" id="mobile" name="mobile" />
+				<input type="text" class="input-text" th:value="${entity.version}" placeholder="" id="version" name="version" />
 			</div>
 		</div>
 
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">键：</label>
+			<label class="form-label col-xs-4 col-sm-2">广告类型：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="balance" id="balance" placeholder="" th:value="${entity.key}" class="input-text"/>
+				<select name="channel" th:field="${entity.channel}" id="channel" class="select" th:value="${entity.channel}"  >
+					<option value="">--请选择--</option>
+					<option th:each="cts,userStat:${list}" th:value="${cts.id}" th:text="${cts.name}"></option>
+
+				</select>
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2">值：</label>
+			<label class="form-label col-xs-4 col-sm-2">广告标题：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" name="points" id="points" placeholder="" th:value="${entity.value}" class="input-text"/>
+				<input type="text" name="title" id="title" placeholder="" th:value="${entity.title}" class="input-text"/>
 			</div>
 		</div>
-
-
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">广告图片：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<div class="uploader-thum-container">
+					<img th:src="${entity.icon}" id="img" name="img"/>
+					<input style="display: none" id="icon" name="icon"/>
+					<div id="filePicker">选择图片</div>
+				</div>
+			</div>
+		</div>
+		<div class="row cl">
+			<label class="form-label col-xs-4 col-sm-2">广告状态：</label>
+			<div class="formControls col-xs-8 col-sm-9">
+				<select class="select" th:value="${entity.status}" id="status" name="status">
+					<option value="0">下架</option>
+					<option value="1">已发布</option>
+				</select>
+			</div>
+		</div>
 
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
@@ -87,9 +114,100 @@
 <script type="text/javascript">
     /*<![CDATA[*/
     $(function(){
+        // 初始化Web Uploader
+        var uploader = WebUploader.create({
+
+            // 选完文件后，是否自动上传。
+            auto: true,
+
+            // swf文件路径
+            swf: '../../static/lib/webuploader/0.1.5/Uploader.swf',
+
+            // 文件接收服务端。
+            server: '/admin/uploadimages',
+
+            // 选择文件的按钮。可选。
+            // 内部根据当前运行是创建，可能是input元素，也可能是flash.
+            pick: {
+                id: '#filePicker',
+                multiple:false,
+                label: '点击选择图片'
+            },
+            fileNumLimit: 1,
+            // 只允许选择图片文件。
+            accept: {
+                title: 'Images',
+                extensions: 'gif,jpg,jpeg,bmp,png',
+                mimeTypes: 'image/*'
+            }
+        });
+        // 当有文件添加进来的时候
+        uploader.on( 'fileQueued', function( file ) {
+            var $li = $(
+                '<div id="' + file.id + '" class="file-item thumbnail">' +
+                '<img>' +
+                '<div class="info">' + file.name + '</div>' +
+                '</div>'
+                ),
+                $img = $li.find('img');
+
+            // 创建缩略图
+            // 如果为非图片文件，可以不用调用此方法。
+            // thumbnailWidth x thumbnailHeight 为 100 x 100
+            uploader.makeThumb( file, function( error, src ) {
+                if ( error ) {
+                    $img.replaceWith('<span>不能预览</span>');
+                    return;
+                }
+
+                $img.attr( 'src', src );
+            }, 100, 100 );
+        });
+        // 文件上传过程中创建进度条实时显示。
+        uploader.on( 'uploadProgress', function( file, percentage ) {
+            var $li = $( '#'+file.id ),
+                $percent = $li.find('.progress span');
+
+            // 避免重复创建
+            if ( !$percent.length ) {
+                $percent = $('<p class="progress"><span></span></p>')
+                    .appendTo( $li )
+                    .find('span');
+            }
+
+            $percent.css( 'width', percentage * 100 + '%' );
+        });
+
+// 文件上传成功，给item添加成功class, 用样式标记上传成功。
+        uploader.on( 'uploadSuccess', function( file ,response) {
+            $( '#img' ).attr("src",response);
+            $( '#icon' ).attr("value",response);
+            $( '#'+file.id ).addClass('upload-state-done');
+
+        });
+
+// 文件上传失败，显示上传出错。
+        uploader.on( 'uploadError', function( file ) {
+            var $li = $( '#'+file.id ),
+                $error = $li.find('div.error');
+
+            // 避免重复创建
+            if ( !$error.length ) {
+                $error = $('<div class="error"></div>').appendTo( $li );
+            }
+
+            $error.text('上传失败');
+        });
+
+// 完成上传完了，成功或者失败，先删除进度条。
+        uploader.on( 'uploadComplete', function( file ) {
+            $( '#'+file.id ).find('.progress').remove();
+        });
+    });
+    $(function(){
 
         //表单验证
-        $("#form-wordbook-add").validate({
+        $("#form-banner-add").validate({
             onkeyup:false,
             focusCleanup:true,
             success:"valid",
