--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -104,8 +104,8 @@
 			<dt><i class="Hui-iconfont">&#xe622;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
+					<li><a data-href="/admin/news/type/index" data-title="资讯类型管理" href="javascript:void(0)">资讯类型列表</a></li>
 					<li><a data-href="/admin/news/index" data-title="资讯管理" href="javascript:void(0)">资讯列表</a></li>
-					<li><a data-href="/admin/news/type/index" data-title="资讯管理" href="javascript:void(0)">资讯列表</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -113,6 +113,7 @@
 			<dt><i class="Hui-iconfont">&#xe628;</i> 广告位管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
+					<li><a data-href="/admin/banner/channel/index" data-title="广告渠道管理" href="javascript:void(0)">广告渠道列表</a></li>
 					<li><a data-href="/admin/banner/index" data-title="广告位管理" href="javascript:void(0)">广告位列表</a></li>
 				</ul>
 			</dd>
