--- a/admin/src/main/resources/templates/article-add.html
+++ b/admin/src/main/resources/templates/article-add.html
@@ -47,10 +47,10 @@
 		<div class="row cl">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>资讯类型：</label>
 			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select" th:value="${entity.type}" id="type" name="type">
-					<option value="0">全部类型</option>
-					<option value="1">帮助说明</option>
-					<option value="2">新闻资讯</option>
+				<select name="type" th:field="${entity.type}" id="type" class="select" th:value="${entity.type}"  >
+					<option value="">--请选择--</option>
+					<option th:each="cts,userStat:${list}" th:value="${cts.id}" th:text="${cts.name}"></option>
+
 				</select>
 				</span> </div>
 		</div>
