--- a/admin/src/main/resources/templates/articletype-add.html
+++ b/admin/src/main/resources/templates/articletype-add.html
@@ -15,13 +15,13 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/webuploader/0.1.5/webuploader.css}" />
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
-<!--/meta 作为公共模版分离出去-->
+	<!--/meta 作为公共模版分离出去-->
 
 
 </head>
 <body>
 <div class="page-container">
-	<form action="/admin/order/save" method="post" class="form form-horizontal" id="form-goods-add">
+	<form action="/admin/news/type/save" method="post" class="form form-horizontal" enctype="application/json" id="form-newstype-add">
 		<div class="row cl" style="display: none">
 			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>ID：</label>
 			<div class="formControls col-xs-8 col-sm-9">
@@ -29,51 +29,20 @@
 			</div>
 		</div>
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>用户id：</label>
+			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>名称：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.userId}" placeholder="" id="userId" name="userId" />
+				<input type="text" class="input-text" th:value="${entity.name}" placeholder="" id="name" name="name" />
 			</div>
 		</div>
+
 		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>skuId：</label>
+			<label class="form-label col-xs-4 col-sm-2">类型：</label>
 			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.skuId}" placeholder="" id="skuId" name="skuId" />
+				<input type="text" name="type" id="type" placeholder="" th:value="${entity.type}" class="input-text"/>
 			</div>
 		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>用户姓名：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.realName}" placeholder="" id="realName" name="realName" />
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>用户手机：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.mobile}" placeholder="" id="mobile" name="mobile" />
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>用户地址：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.address}" placeholder="" id="address" name="address" />
-			</div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>订单状态：</label>
-			<div class="formControls col-xs-8 col-sm-9"> <span class="select-box">
-				<select class="select" th:value="${entity.orderStatus}" id="orderStatus" name="orderStatus">
-					<option value="0">进行中</option>
-					<option value="1">成功</option>
-					<option value="2">失败</option>
-				</select>
-				</span> </div>
-		</div>
-		<div class="row cl">
-			<label class="form-label col-xs-4 col-sm-2"><span class="c-red">*</span>快递单号：</label>
-			<div class="formControls col-xs-8 col-sm-9">
-				<input type="text" class="input-text" th:value="${entity.expressNo}" placeholder="" id="expressNo" name="expressNo" />
-			</div>
-		</div>
+
+
 
 		<div class="row cl">
 			<div class="col-xs-8 col-sm-9 col-xs-offset-4 col-sm-offset-2">
@@ -110,30 +79,29 @@
 <script type="text/javascript" th:src="@{/lib/ueditor/1.4.3/ueditor.all.min.js}"> </script>
 <script type="text/javascript" th:src="@{/lib/ueditor/1.4.3/lang/zh-cn/zh-cn.js}"></script>
 <script type="text/javascript">
-/*<![CDATA[*/
-$(function(){
+    /*<![CDATA[*/
+    $(function(){
 
-    //表单验证
-    $("#form-goods-add").validate({
-        onkeyup:false,
-        focusCleanup:true,
-        success:"valid",
-        submitHandler:function(form){
+        //表单验证
+        $("#form-newstype-add").validate({
+            onkeyup:false,
+            focusCleanup:true,
+            success:"valid",
+            submitHandler:function(form){
+                $(form).ajaxSubmit(function (res) {
+                    if (res) {
+                        parent.location.reload();
+                        layer_close();
+                    }else {
+                        console.log(res);
+                    }
+                });
+            }
+        });
 
-            $(form).ajaxSubmit(function (res) {
-                if (res == 'ok') {
-                    parent.location.reload();
-                    layer_close();
-                }else {
-                    console.log(res);
-                }
-            });
-        }
+
     });
-
-
-});
-/*]]>*/
+    /*]]>*/
 </script>
 </body>
 </html>
