--- a/admin/src/main/resources/templates/bannerchannel-list.html
+++ b/admin/src/main/resources/templates/bannerchannel-list.html
@@ -16,31 +16,28 @@
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
 
-	<title>成员列表</title>
+	<title>广告渠道列表</title>
 </head>
 <body>
 <nav class="breadcrumb">
 	<i class="Hui-iconfont">&#xe67f;</i>首页
-	<span class="c-gray en">&gt;</span> 广告位管理
-	<span class="c-gray en">&gt;</span> 广告位列表
+	<span class="c-gray en">&gt;</span> 广告渠道管理
+	<span class="c-gray en">&gt;</span> 广告渠道列表
 	<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
 		<i class="Hui-iconfont">&#xe68f;</i>
 	</a>
 </nav>
 <div class="page-container">
 	<div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l">
-		<a class="btn btn-primary radius" data-title="添加广告位" onclick="add('新增','/admin/banner/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加广告位</a></span> </div>
+		<a class="btn btn-primary radius" data-title="添加广告渠道" onclick="add('新增','/admin/banner/channel/add')" href="javascript:;"><i class="Hui-iconfont">&#xe600;</i> 添加广告渠道</a></span> </div>
 	<div class="mt-20">
 		<table class="table table-border table-bordered table-bg table-sort">
 			<thead>
 			<tr class="text-c">
 				<th width="25"><input type="checkbox" name="" value="" /></th>
 				<th width="100">ID</th>
-				<th width="120">版本号</th>
-				<th width="120">广告类型</th>
-				<th width="120">广告标题</th>
-				<th width="200">广告图片</th>
-				<th width="120">广告状态</th>
+				<th width="80">名称</th>
+				<th width="200">类型</th>
 				<th width="100">操作</th>
 			</tr>
 			</thead>
@@ -96,24 +93,12 @@
                     }
                 },
                 { "data": "id" },
-                { "data": "version" ,"bSortable": false},
-                { "data": "channel" ,"bSortable": false},
-                { "data": "title" ,"bSortable": false},
-                { "data": "icon" ,"bSortable": false,
-                    "render": function ( data, type, full, meta ) {
-                        return '<div style="width:40px;height:30px;display:inline-block; verticalAlign:middle;marginRight:10px">' +
-                            '<a href="'+data+'" target="_blank"><img src="'+data+'" style="width:100%;height:100%;border:none" /></a></div>';
-                    }
-				},
-                { "data": "status" ,"bSortable": false,
-                    "render": function ( data, type, full, meta ) {
-                        return data==1?'<span>上架</span>':'<span>下架</span>'
-                    }
-				},
+                { "data": "name" ,"bSortable": false},
+                { "data": "type" ,"bSortable": false},
 
                 { "data":  null,"bSortable": false,
                     "render": function (data, type,row) {
-                        var tem = '<a title="编辑" href="javascript:;" onclick="edit(\'编辑\',\'/admin/banner/edit\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
+                        var tem = '<a title="编辑" href="javascript:;" onclick="edit(\'编辑\',\'/admin/banner/channel/edit\',\''+ data.id +'\',\'800\',\'500\')" class="ml-5" style="text-decoration:none">'
                             + '<i class="Hui-iconfont">&#xe6df;</i></a>'+
                             '<a title="删除" href="javascript:;" onclick="del(this,\''+data.id+'\')" class="ml-5" style="text-decoration:none">'
                             + '<i class="Hui-iconfont">&#xe6e2;</i></a>';
@@ -132,6 +117,7 @@
         });
         layer.full(index);
     }
+
     /*资讯-编辑*/
     function edit(title,url,id,w,h){
         var index = layer.open({
@@ -145,7 +131,7 @@
         layer.confirm('确认要删除吗？', function (index) {
             $.ajax({
                 type: 'POST',
-                url: '/admin/banner/delete/' + id,
+                url: '/admin/banner/channel/delete/' + id,
                 dataType: 'json',
                 success: function (data) {
                     $(obj).parents("tr").remove();
