--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -92,14 +92,6 @@
 			</ul>
 		</dd>
 	</dl>
-		<dl id="menu-problem">
-			<dt><i class="Hui-iconfont">&#xe616;</i> 常见问题管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-			<dd>
-				<ul>
-					<li><a data-href="/admin/problem/list" data-title="常见问题管理" href="javascript:void(0)">常见问题列表</a></li>
-			</ul>
-		</dd>
-	</dl>
 		<dl id="menu-order">
 			<dt><i class="Hui-iconfont">&#xe616;</i> 回收单管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
@@ -143,10 +135,10 @@
 			</dd>
 		</dl>
 		<dl id="menu-branch">
-			<dt><i class="Hui-iconfont">&#xe624;</i> 分公司<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe624;</i> 全国分公司<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/branch/index" data-title="分公司" href="javascript:void(0)">分公司列表</a></li>
+					<li><a data-href="/admin/branch/index" data-title="全国分公司" href="javascript:void(0)">全国分公司列表</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -171,6 +163,14 @@
 			<dd>
 				<ul>
 					<li><a data-href="/admin/authority/index" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
+				</ul>
+			</dd>
+		</dl>
+		<dl id="menu-problem">
+			<dt><i class="Hui-iconfont">&#xe616;</i> 常见问题管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dd>
+				<ul>
+					<li><a data-href="/admin/problem/list" data-title="常见问题管理" href="javascript:void(0)">常见问题列表</a></li>
 				</ul>
 			</dd>
 		</dl>
