--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -5,9 +5,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 <meta http-equiv="Cache-Control" content="no-siteapp" />
+<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
 <link rel="Bookmark"  th:href="@{/favicon.ico}" />
 <link rel="Shortcut Icon"  th:href="@{/favicon.ico}" />
-<!--[if lt IE 9]>
+	<!--[if lt IE 9]>
 <script type="text/javascript" th:src="@{/html5shiv.js}"></script>
 <script type="text/javascript" th:src="@{/respond.min.js}"></script>
 <![endif]-->
@@ -72,7 +73,7 @@
 			<dt><i class="Hui-iconfont">&#xe620;</i> 数据统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/statistic/index" data-title="数据统计" href="javascript:void(0)">数据统计</a></li>
+					<li><a data-href="/admin/coding" data-title="数据统计" href="javascript:void(0)">数据统计</a></li>
 				</ul>
 			</dd>
 	</dl>
@@ -130,7 +131,7 @@
 			<dt><i class="Hui-iconfont">&#xe623;</i> 合作伙伴<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/partner/index" data-title="合作伙伴" href="javascript:void(0)">合作伙伴</a></li>
+					<li><a data-href="/admin/coding" data-title="合作伙伴" href="javascript:void(0)">合作伙伴</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -138,7 +139,7 @@
 			<dt><i class="Hui-iconfont">&#xe624;</i> 全国分公司<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/branch/index" data-title="全国分公司" href="javascript:void(0)">全国分公司列表</a></li>
+					<li><a data-href="/admin/coding" data-title="全国分公司" href="javascript:void(0)">全国分公司列表</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -146,7 +147,7 @@
 			<dt><i class="Hui-iconfont">&#xe625;</i> 校园代理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/school/index" data-title="校园代理" href="javascript:void(0)">校园代理</a></li>
+					<li><a data-href="/admin/coding" data-title="校园代理" href="javascript:void(0)">校园代理</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -154,7 +155,7 @@
 			<dt><i class="Hui-iconfont">&#xe626;</i> 商家代理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/business/index" data-title="商家代理" href="javascript:void(0)">商家代理</a></li>
+					<li><a data-href="/admin/coding" data-title="商家代理" href="javascript:void(0)">商家代理</a></li>
 				</ul>
 			</dd>
 		</dl>
@@ -162,7 +163,7 @@
 			<dt><i class="Hui-iconfont">&#xe627;</i> 权限管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="/admin/authority/index" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
+					<li><a data-href="/admin/coding" data-title="权限管理" href="javascript:void(0)">权限管理</a></li>
 				</ul>
 			</dd>
 		</dl>
