--- a/admin/src/main/resources/templates/article-list.html
+++ b/admin/src/main/resources/templates/article-list.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
+	<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
 	<script type="text/javascript" th:src="@{/lib/html5shiv.js}"></script>
 	<script type="text/javascript" th:src="@{/lib/respond.min.js}"></script>
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui/css/H-ui.min.css}" />
