--- a/admin/src/main/resources/templates/articletype-add.html
+++ b/admin/src/main/resources/templates/articletype-add.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/Hui-iconfont/1.0.8/iconfont.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/skin/default/skin.css}" id="skin" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/style.css}" />
+	<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/webuploader/0.1.5/webuploader.css}" />
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
