--- a/admin/src/main/resources/templates/login.html
+++ b/admin/src/main/resources/templates/login.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
   <meta http-equiv="Cache-Control" content="no-siteapp" />
+  <link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
   <link rel="Bookmark"  th:href="@{/favicon.ico}" />
   <link rel="Shortcut Icon"  th:href="@{/favicon.ico}" />
   <script type="text/javascript" th:src="@{/lib/html5shiv.js}"></script>
