--- a/admin/src/main/resources/templates/product-add.html
+++ b/admin/src/main/resources/templates/product-add.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/skin/default/skin.css}" id="skin" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/style.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/lib/webuploader/0.1.5/webuploader.css}" />
+	<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
 <!--/meta 作为公共模版分离出去-->
