--- a/admin/src/main/resources/templates/welcome.html
+++ b/admin/src/main/resources/templates/welcome.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/skin/default/skin.css}" id="skin" />
 	<link rel="stylesheet" type="text/css" th:href="@{/h-ui.admin/css/style.css}" />
 	<link th:href="@{/h-ui.admin/css/H-ui.login.css}" rel="stylesheet" type="text/css" />
+	<link rel="icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
 	<script type="text/javascript" th:src="@{/lib/DD_belatedPNG_0.0.8a-min.js}" ></script>
 	<script>DD_belatedPNG.fix('*');</script>
 	<title>后台管理系统</title>
